--- a/culture.html
+++ b/culture.html
@@ -62,7 +62,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/r">free bootstrap template</a></section><section class="features2 cid-rjSC9K4sFC" id="features2-t">
+<section class="engine"><a href="https://mobirise.info/t">amp template</a></section><section class="features2 cid-rjSC9K4sFC" id="features2-t">
 
     
 
@@ -134,10 +134,10 @@
                         <img src="assets/images/chess-676x391.jpg" alt="Mobirise" title="">
                     </div>
                     <div class="card-box">
-                        <h4 class="card-title pb-3 mbr-fonts-style display-7">
-                            Chess</h4>
+                        <h4 class="card-title pb-3 mbr-fonts-style display-7"><a href="chess2.html">
+                            Chess</a></h4>
                         <p class="mbr-text mbr-fonts-style display-7">
-                            Mobirise is an easy website builder - just drop site elements to your page, add content and style it to look the way you like.<a href="chess.html"> Learn more...</a>
+                            Mobirise is an easy website builder - just drop site elements to your page, add content and style it to look the way you like.<a href="chess2.html"> Learn more...</a>
                         </p>
                     </div>
                 </div>
