--- a/page30.html
+++ b/page30.html
@@ -62,7 +62,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/b">how to create your own site</a></section><section class="mbr-section" id="witsec-custom-html-block-p" data-rv-view="526" style="background-color: rgb(255, 255, 255);">
+<section class="engine"><a href="https://mobirise.info/r">bootstrap template</a></section><section class="mbr-section" id="witsec-custom-html-block-p" data-rv-view="526" style="background-color: rgb(255, 255, 255);">
  
  <div class="witsec-custom-html-container elements-content" style="padding-top:2rem; padding-bottom:2rem">
      
