--- a/mathematics.html
+++ b/mathematics.html
@@ -62,7 +62,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/l">free site templates</a></section><section class="features14 cid-rk7bO4Klgb" id="features14-v">
+<section class="engine"><a href="https://mobirise.info/m">web design templates</a></section><section class="features14 cid-rk7bO4Klgb" id="features14-v">
     
     
 
