--- a/science.html
+++ b/science.html
@@ -62,7 +62,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/n">simple site templates</a></section><section once="" class="cid-rjMCSaw8FX mbr-reveal" id="footer6-k">
+<section class="engine"><a href="https://mobirise.info/h">how to create your own web page</a></section><section once="" class="cid-rjMCSaw8FX mbr-reveal" id="footer6-k">
 
     
 
