--- a/technical.html
+++ b/technical.html
@@ -62,7 +62,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/b">how to create a website</a></section><section class="features14 cid-rkcrmsnS4x" id="features14-w">
+<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section class="features14 cid-rkcrmsnS4x" id="features14-w">
     
     
 
