--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/t">free amp template</a></section><section class="header3 cid-rlsZvnNH7d mbr-fullscreen mbr-parallax-background" id="header3-f6">
+<section class="engine"><a href="https://mobirise.info/d">free website maker</a></section><section class="header3 cid-rlsZvnNH7d mbr-fullscreen mbr-parallax-background" id="header3-f6">
 
     
 
@@ -95,23 +95,25 @@
  
  <div class="witsec-custom-html-container elements-content" style="padding-top: 4rem; padding-bottom: 0rem;">
      
-    <div class="mbr-section__container block" style="width: 100%;"><section class="section1">
-  <div class="container-fluid" style="background-color:#cccccc">
-    <div class="row section1Row">
-      <div class="col-md-6  section1Text">
+    <div class="mbr-section__container block" style="width: 100%;"><div class="container-fluid">
+<div class="row">
+<div class="col-xs-10 col-md-6">
+<h3 class="bg-lightgray text-center text-primary">Bellville Technical High School Offers</h3>
 
-        <h3 class="bg-lightgray text-center text-primary">Bellville Technical High School Offers</h3>
-
-        <p class="bg-lightgray text-dark"></p><li>Dual Medium Instruction in Afrikaans and English</li><li>Modern classrooms and Workshops;</li><li>A Technical Focus with the Full range of Technical Subjects;</li><li>Mathematics &amp; Physical Science;</li><li>Engineering &amp; Graphics Design;</li><li>Small Classes in Spesialised Subjects;</li><li>Soccer-, Hockey and Rugby Fields, Athletic Track;</li><li>Popular Cross-Country Track on the Premises;</li><li>World Class Indoor Cricket Practise Nets;</li><li>Cultural Activities: Choir, Spelling Bee, Poetry, Arts &amp; Crafts, Newspaper,  Debate and Photography</li><li>Toyota Technical Educational Program (TTEP);</li><li>Partaking in the National Technical Skills Competitions;</li><li>Extra-Curricular Projects:  Car Repair, Coding &amp; Microbotics.</li><p></p>
-      </div>
-      <div class="video-responsive">
-<div class="md-4">
-        <iframe width="605" height="340" src="https://www.youtube.com/embed/HAYbt3MHx0E?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen="true"></iframe>
+        <p class="bg-lightgray text-dark"></p><li>Dual Medium Instruction in Afrikaans and English</li><li>Modern classrooms and Workshops;</li>
+		<li>A Technical Focus with the Full range of Technical Subjects;</li>
+		<li>Mathematics &amp; Physical Science;</li><li>Engineering &amp; Graphics Design;</li>
+		<li>Small Classes in Spesialised Subjects;</li><li>Soccer-, Hockey and Rugby Fields, Athletic Track;</li>
+		<li>Popular Cross-Country Track on the Premises;</li><li>World Class Indoor Cricket Practise Nets;</li>
+		<li>Cultural Activities: Choir, Spelling Bee, Poetry, Arts &amp; Crafts, Newspaper,  Debate and Photography</li>
+		<li>Toyota Technical Educational Program (TTEP);</li><li>Partaking in the National Technical Skills Competitions;</li>
+		<li>Extra-Curricular Projects:  Car Repair, Coding &amp; Microbotics.</li><p></p></div>
+<div class="col-xs-10 col-md-6"> 
+<div class="embed-responsive embed-responsive-16by9">
+        <iframe src="https://www.youtube.com/embed/HAYbt3MHx0E?rel=0&amp;showinfo=0" width="100%" frameborder="0" allowfullscreen="true"></iframe>
       </div>
     </div>
-  </div>
-</div></section>
-</div>
+</div></div></div>
  </div>
 
 </section>
