--- a/page35.html
+++ b/page35.html
@@ -62,7 +62,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/s">bootstrap theme</a></section><section once="" class="cid-rkiaREG7lU mbr-reveal" id="footer6-4r">
+<section class="engine"><a href="https://mobirise.info/u">bootstrap responsive templates</a></section><section once="" class="cid-rkiaREG7lU mbr-reveal" id="footer6-4r">
 
     
 
