--- a/welding.html
+++ b/welding.html
@@ -62,7 +62,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/w">html5 templates</a></section><section once="" class="cid-rkkIHSND3N mbr-reveal" id="footer6-v">
+<section class="engine"><a href="https://mobirise.info/s">bootstrap theme</a></section><section once="" class="cid-rkkIHSND3N mbr-reveal" id="footer6-v">
 
     
 
