--- a/chess2.html
+++ b/chess2.html
@@ -63,7 +63,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/b">create a site for free</a></section><section class="mbr-section content4 cid-rlCFXnSpHz" id="content4-lu">
+<section class="engine"><a href="https://mobirise.info/n">free simple site templates</a></section><section class="mbr-section content4 cid-rlCFXnSpHz" id="content4-lu">
 
     
 
