--- a/culture.html
+++ b/culture.html
@@ -62,7 +62,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/a">online website builder</a></section><section class="features2 cid-rjSC9K4sFC" id="features2-t">
+<section class="engine"><a href="https://mobirise.info/b">how to create a site</a></section><section class="features2 cid-rjSC9K4sFC" id="features2-t">
 
     
 
