--- a/egd.html
+++ b/egd.html
@@ -62,7 +62,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/r">bootstrap template</a></section><section once="" class="cid-rkkVpsokjw mbr-reveal" id="footer6-10">
+<section class="engine"><a href="https://mobirise.info/u">bootstrap html templates</a></section><section once="" class="cid-rkkVpsokjw mbr-reveal" id="footer6-10">
 
     
 
