--- a/newspaper.html
+++ b/newspaper.html
@@ -62,7 +62,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/l">free site templates</a></section><section class="mbr-section" id="witsec-custom-html-block-1h" data-rv-view="570" style="background-color: rgb(255, 255, 255);">
+<section class="engine"><a href="https://mobirise.info/w">free html5 templates</a></section><section class="mbr-section" id="witsec-custom-html-block-1h" data-rv-view="570" style="background-color: rgb(255, 255, 255);">
  
  <div class="witsec-custom-html-container elements-content" style="padding-top:2rem; padding-bottom:2rem">
      
